// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`explorer has project root info 1`] = `

<div>
  <section class="flex w-full grow flex-col justify-between rounded-lg bg-white dark:bg-black">
    <div class="flex w-full border-[1px] px-8 py-4">
      <div class="mx-auto flex w-full max-w-7xl items-center justify-between">
        <p class="font-mono text-xs font-light text-muted-foreground">
          :host-context(file:/path/to/project)
        </p>
      </div>
    </div>
    <section class="flex w-full items-center border-x-[1px] px-8 py-4">
      <div class="mx-auto flex w-full max-w-7xl flex-row items-center gap-2">
        <gui-root-button>
        </gui-root-button>
        <gui-search-bar
          tabindex="0"
          classname="w-full bg-muted-foreground/5"
          startcontent="[object Object]"
          endcontent="[object Object]"
        >
        </gui-search-bar>
      </div>
    </section>
    <gui-explorer-grid>
    </gui-explorer-grid>
  </section>
</div>

`;

exports[`explorer not vlt installed 1`] = `

<div>
  <gui-setup-project>
  </gui-setup-project>
</div>

`;

exports[`render default 1`] = `

<div>
</div>

`;
